<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:textStyle="bold"
        android:textSize="60dp"
        android:textColor="@color/white"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp"
        android:layout_above="@id/nums"/>
    
    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/del"
                android:text="@string/del_text"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num7"
                android:text="@string/num7_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num4"
                android:text="@string/num4_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num1"
                android:text="@string/num1_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/sign_change"
                android:text="@string/sign_change_text"
                style="@style/Button2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                android:text="@string/ac_text"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num8"
                android:text="@string/num8_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num5"
                android:text="@string/num5_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num2"
                android:text="@string/num2_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num0"
                android:text="@string/num0_text"
                style="@style/Button2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/square_root"
                android:text="@string/square_root_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num9"
                android:text="@string/num9_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num6"
                android:text="@string/num6_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num3"
                android:text="@string/num3_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/dot"
                android:text="@string/dot_text"
                style="@style/Button2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/div"
                android:text="@string/div_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/multiply"
                android:text="@string/multiply_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/subtraction"
                android:text="@string/subtraction_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/sum"
                android:text="@string/sum_text"
                style="@style/Button2"/>
            <Button
                android:id="@+id/equal"
                android:text="@string/equal_text"
                style="@style/Button2"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>